# MQTT_UBX_CELL

./: .gitignore  CMakeLists.txt  sdkconfig  state_machine.drawio
CoreMqtt/: core_mqtt.c  core_mqtt_serializer.c  core_mqtt_state.c  transport_interface.c
CoreMqtt/include/: core_mqtt_config.h  core_mqtt_config_defaults.h  transport_interface.h
main/: CMakeLists.txt  CellApplication.c  CellApplication.h  Main.c  Main.h  SysDef.h  System.c  System.h  TimerTask.c  TimerTask.h  adxl357.c  adxl357.h  fft.c  fft.h
main/web/: ctrlcfg.html  index.html
